fixed step-behind angle bug/refactored code

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ h1 {
 	color: rgba(0,0,0,0.5);
 	text-align: center;
 	text-transform: uppercase;
-	letter-spacing: .5em;
+	letter-spacing: .4em;
 	width: 100%;
 }
 
